--- a/data/config_modern.html
+++ b/data/config_modern.html
@@ -13,13 +13,17 @@
     <title>Cloak</title>
   </head>
   <body>
-	<div class="row align-items-center" style="min-height: 90vh">
+	<main class="container">
+	<div class="d-flex aligns-items-center justify-content-center mt-2" style="min-height: 90vh">
 		<form class="row g-3 mx-auto" style="width: 400px" action="/update_config" method="post">
 			%GENERATED%
 			<div class="col-12">
-			<button type="submit" class="btn btn-primary">Save</button>
+			<button type="submit" class="btn btn-success">Save</button>
+			<a href="/update" class="link-secondary">Update Firmware</a>
+			<a href="/reboot" class="link-primary">Reboot</a>
 			</div>
 		</form>
 	</div>
+	</main>
   </body>
 </html>
