updt: UI: alignment fixes

--- a/data/config_modern.html
+++ b/data/config_modern.html
@@ -14,12 +14,12 @@
   </head>
   <body>
 	<main class="container">
-	<div class="d-flex aligns-items-center justify-content-center mt-2" style="min-height: 90vh">
-		<form class="row g-3 mx-auto" style="width: 400px" action="/update_config" method="post">
+	<div class="d-flex align-items-center justify-content-center mt-3" style="width:auto">
+		<form class="row g-3 align-items-center" style="width:400px" action="/update_config" method="post">
 			%GENERATED%
-			<div class="col-12">
+			<div class="d-flex align-items-center justify-content-around" style="width: 100%">
 			<button type="submit" class="btn btn-success">Save</button>
-			<a href="/update" class="link-secondary">Update Firmware</a>
+			<a href="/update" class="link-primary">Update Firmware</a>
 			<a href="/reboot" class="link-primary">Reboot</a>
 			</div>
 		</form>
