--- a/data/config_modern.html
+++ b/data/config_modern.html
@@ -10,6 +10,13 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
+	<style>
+		main.container {
+		  padding-top: 10px; /* Adjust the top padding value as needed */
+		  padding-bottom: 30px; /* Adjust the bottom padding value as needed */
+		}
+	</style>
+
     <title>Cloak</title>
   </head>
   <body>
